--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <title>HacktoberPet by Junior Developer Group</title>
 
     <!-- FAVICON -->
-    <link rel="icon" type="image/jpg" href="/assets/images/favicon.ico" />
+    <link rel="icon" type="image/jpg" href="./assets/images/favicon.ico" />
 
     <!-- CSS STYLESHEET -->
-    <link rel="stylesheet" href="/assets/styles/style.css" />
+    <link rel="stylesheet" href="./assets/styles/style.css" />
   </head>
 
   <body>
@@ -41,7 +41,7 @@
     <section class="header-introduction">
         <header class="header-content">
             
-            <img src="/assets/images/logo.png" alt="Junior Developer Group | a butterfly with dotted wings">
+            <img src="./assets/images/logo.png" alt="Junior Developer Group | a butterfly with dotted wings">
             
             <h1> HacktoberPet </h1>
 
@@ -107,8 +107,8 @@
 
 
      <!-- Scripts -->
-  <script src="/assets/scripts/main.js"></script>
-  <script type='text/javascript' src='/assets/scripts/joinUs.js'></script>
+  <script src="./assets/scripts/main.js"></script>
+  <script type='text/javascript' src='./assets/scripts/joinUs.js'></script>
 
   </body>
 </html>
