adding an example card

--- a/index.html
+++ b/index.html
@@ -1,114 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- SEO SETTINGS FOR GOOGLE-->
-    <meta name="author" content="HacktoberPet by Junior Developer Group" />
-    <meta
-      name="description"
-      content="Join our HacktoberFest 2021 challenge and create a personalised card presenting your pet or a favourite animal"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- SEO SETTINGS FOR WHEN WEBSITE URL IS SHARED -->
-    <meta
-      name="og:title"
-      property="og:title"
-      content="HacktoberPet by Junior Developer Group"
-    />
-    <meta
-      property="og:description"
-      content="Join our HacktoberFest 2021 challenge and create a personalised card presenting your pet or a favourite animal"
-    />
-    <meta
-      property="og:image"
-      content="/assets/website-images/logo-with-background.png"
-    />
+  <!-- SEO SETTINGS FOR GOOGLE-->
+  <meta name="author" content="HacktoberPet by Junior Developer Group" />
+  <meta name="description"
+    content="Join our HacktoberFest 2021 challenge and create a personalised card presenting your pet or a favourite animal" />
 
-    <!-- WEBSITE TITLE-->
-    <title>HacktoberPet by Junior Developer Group</title>
+  <!-- SEO SETTINGS FOR WHEN WEBSITE URL IS SHARED -->
+  <meta name="og:title" property="og:title" content="HacktoberPet by Junior Developer Group" />
+  <meta property="og:description"
+    content="Join our HacktoberFest 2021 challenge and create a personalised card presenting your pet or a favourite animal" />
+  <meta property="og:image" content="/assets/website-images/logo-with-background.png" />
 
-    <!-- FAVICON -->
-    <link rel="icon" type="image/jpg" href="./assets/images/favicon.ico" />
+  <!-- WEBSITE TITLE-->
+  <title>HacktoberPet by Junior Developer Group</title>
 
-    <!-- CSS STYLESHEET -->
-    <link rel="stylesheet" href="./assets/styles/style.css" />
-  </head>
+  <!-- FAVICON -->
+  <link rel="icon" type="image/jpg" href="./assets/images/favicon.ico" />
 
-  <body>
+  <!-- CSS STYLESHEET -->
+  <link rel="stylesheet" href="./assets/styles/style.css" />
+</head>
 
-    <section class="header-introduction">
-        <header class="header-content">
-            
-            <img src="./assets/images/logo.png" alt="Junior Developer Group | a butterfly with dotted wings">
-            
-            <h1> HacktoberPet </h1>
+<body>
 
-            <span>by Junior Developer Group </span>
-        </header>
-    </section>
+  <section class="header-introduction">
+    <header class="header-content">
 
-    <section class="welcome-stranger">
+      <img src="./assets/images/logo.png" alt="Junior Developer Group | a butterfly with dotted wings">
 
-           <div class="welcome-content">
-                <h1> Welcome 😊 </h1>
+      <h1> HacktoberPet </h1>
 
-                <p>This page was set up as a simple front end challenge for 
-                    <a href="https://hacktoberfest.digitalocean.com/" target="_blank" noreferer>  
-                        HacktoberFest 2021 event.
-                    </a>  
-                </p>
+      <span>by Junior Developer Group </span>
+    </header>
+  </section>
 
-                <p> The goal is to create your personal pet or favourite animal card, style it any way you'd like to and have fun making it. </p>
+  <section class="welcome-stranger">
 
-                <p>                     
-                    Before you start, please have a look at a couple of participation 
-                    rules I've set up. Not following the set rules might get your pull
-                    request rejected.
-                </p>
+    <div class="welcome-content">
+      <h1> Welcome 😊 </h1>
 
-                <div class="welcome-content__rules">
-                    <details>
-                            <summary> Will Be Accepted:</summary>
+      <p>This page was set up as a simple front end challenge for
+        <a href="https://hacktoberfest.digitalocean.com/" target="_blank" noreferer>
+          HacktoberFest 2021 event.
+        </a>
+      </p>
 
-                            <ul>
-                                <li> A line or two of introduction text about your pet or favourite animal </li>
-                                <li> Any links to pointing towards more information on the chosen animal</li>
-                                <li> Any personal links to your portfolios, projects or social media </li>
-                                <li> Any personally owned images or videos (only via embeds) </li>
-                            </ul>
-                    </details>
+      <p> The goal is to create your personal pet or favourite animal card, style it any way you'd like to and have fun
+        making it. </p>
 
-                    <details>
-                        <summary> Won't Be Accepted: </summary>
- 
-                        <ul>
-                            <li> Submittions containing offensive text, images, videos and links of any kind </li>
-                            <li> Use of copyrighted or promotional content not owned by yourself </li>
-                            <li> Use of auto play for any videos submitted </li>
-                            <li> Use of copy/pasted materials</li>
-                        </ul>
-                </details>
-                </div>
-           </div>
+      <p>
+        Before you start, please have a look at a couple of participation
+        rules I've set up. Not following the set rules might get your pull
+        request rejected.
+      </p>
 
-    </section>
+      <div class="welcome-content__rules">
+        <details>
+          <summary> Will Be Accepted:</summary>
+
+          <ul>
+            <li> A line or two of introduction text about your pet or favourite animal </li>
+            <li> Any links to pointing towards more information on the chosen animal</li>
+            <li> Any personal links to your portfolios, projects or social media </li>
+            <li> Any personally owned images or videos (only via embeds) </li>
+          </ul>
+        </details>
+
+        <details>
+          <summary> Won't Be Accepted: </summary>
+
+          <ul>
+            <li> Submittions containing offensive text, images, videos and links of any kind </li>
+            <li> Use of copyrighted or promotional content not owned by yourself </li>
+            <li> Use of auto play for any videos submitted </li>
+            <li> Use of copy/pasted materials</li>
+          </ul>
+        </details>
+      </div>
+    </div>
+
+  </section>
 
 
-    <section class="hacktoberfest-wrapper">
-        <!------------------------------------------------------------------------------------------------->
-        <!-------------- 👇 ADD YOUR PET OR FAVOURITE ANIMAL CARD BELOW THIS COMMENT 👇  ------------------>
-        <!------------------------------------------------------------------------------------------------->
+  <section class="hacktoberfest-wrapper">
+    <!------------------------------------------------------------------------------------------------->
+    <!-------------- 👇 ADD YOUR PET OR FAVOURITE ANIMAL CARD BELOW THIS COMMENT 👇  ------------------>
+    <!------------------------------------------------------------------------------------------------->
+    <div class="buddyCard">
+      <div class="buddyCardPivot">
+        <div class="buddyCardFront">
+          <img class="buddy_image" src="./assets/images/buddy.png" alt="brown and white horse">
+          <hr>
+          <h1>Buddy</h1>
+        </div>
+        <div class="buddyCardBack">
+          <h1>Buddy</h1>
+          <p>This is my horse Buddy, ive owned him for 17 years, he is very much part of the family and although he is
+            retired now he still keeps me on my toes!</p>
+          <ul>
+            <li>❤️ Age: 24</li>
+            <li>❤️ Likes: Food! </li>
+            <li>❤️ Dislikes: Parsnips and being bathed!</li>
+            <li>❤️ Thinks: The grass is greener over the fence!</li>
+            <li>❤️ Special Talent: Escape artist. </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+  </section>
 
 
-    </section>
 
-
-
-     <!-- Scripts -->
+  <!-- Scripts -->
   <script src="./assets/scripts/main.js"></script>
   <script type='text/javascript' src='./assets/scripts/joinUs.js'></script>
 
-  </body>
+</body>
+
 </html>
