CoolDude69 Card for Hacktoberfest 2021

--- a/index.html
+++ b/index.html
@@ -112,7 +112,28 @@
         </div>
       </div>
     </div>
-
+     <!--  CoolDude69  -->
+     <div class="CoolDude69">
+      <div class="CoolDude69-head">
+        <div class="profile-img">
+          <img src="./assets/images/CoolDude69.jpg" width="240px" height="200px">
+        </div>
+      </div>
+      <div class="CoolDude69-body">
+        <div class="CoolDude69-name">CoolDude69</div>
+        <div class="desc">This is my Cute Baby Tortoise😍</div>
+        <div class="CoolDude69-content">
+          <ul>
+            <li>Age 6 -</li>
+            <li>Likes to Sleep -</li>
+            <li>Shy</li>
+          </ul>
+          <br />
+          <a href="https://en.wikipedia.org/wiki/Tortoise" target="_blank"><button class="btn-portfolio">More Info</button></a></div>
+        </div>
+      </div>
+    </div>
+    <!--  CoolDude69 End-->
   </section>
 
 
