--- a/index.html
+++ b/index.html
@@ -134,6 +134,21 @@
       </div>
     </div>
     <!--  CoolDude69 End-->
+
+    <!--  Likii Start-->
+    <div class="likiis-card">
+      <div class="catthew-image">
+        <img src="./assets/images/pets/catthew.png">
+      </div>
+        <div class="catthew-info">
+          <p>  <strong>Name:</strong> Catthew 👑</p>
+          <p>  <strong>Age:</strong>  1 and a bit  </p>
+          <p> <strong> Hobbies:</strong> Catching frogs, meowing at birds, removing household wires and walking on keyboards 🐱 </p>
+          <p>  <strong>Friends:</strong> Busy Cat, Girl Cat </p>
+          <p>  <strong>Enemies:</strong> Old White Cat </p>
+        </div>
+    </div>
+    <!--  Likii End-->
   </section>
 
 
