Add pet and contributor section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
   <!-- CSS STYLESHEET -->
   <link rel="stylesheet" href="./assets/styles/style.css" />
+  <link rel="stylesheet" href="./assets/styles/macs.css" />
 </head>
 
 <body>
@@ -134,6 +135,16 @@
       </div>
     </div>
     <!--  CoolDude69 End-->
+  </section>
+
+  <section class="contributor-section">
+    <h2 style="text-align: center;">Added Pets!</h2>
+    <div class="contributor-cards">
+      <div class="macsCard">
+        <img src="./assets/images/macs.JPG" alt="yellow cockatiel" height="400">
+        <p>This is Macs, our family cockatiel who has been with us for over 7 years.</p>
+      </div>
+    </div>
   </section>
 
 
