Create my card for my pet

--- a/index.html
+++ b/index.html
@@ -149,6 +149,21 @@
         </div>
     </div>
     <!--  Likii End-->
+
+    <!--  Jeff Start-->
+    <div class="jeff-card">
+      <div class="dusty-image">
+        <img src="./assets/images/pets/dusty.jpeg">
+      </div>
+        <div class="dusty-info">
+          <p>  <strong>Name:</strong> Dusty</p>
+          <p>  <strong>Age:</strong>  2 years old - 14 in Dog Years </p>
+          <p> <strong> Hobbies:</strong> Digging, running around the yard and herding the other dogs. </p>
+          <p>  <strong>Friends:</strong> His brothers Gunther and Maximus </p>
+          <p>  <strong>Enemies:</strong> Loud Noises </p>
+        </div>
+    </div>
+    <!--  Jeff End-->
   </section>
 
 
