--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 
   <!-- CSS STYLESHEET -->
   <link rel="stylesheet" href="./assets/styles/style.css" />
-  <link rel="stylesheet" href="./assets/styles/macs.css" />
 </head>
 
 <body>
@@ -92,6 +91,8 @@
     <!------------------------------------------------------------------------------------------------->
     <!-------------- 👇 ADD YOUR PET OR FAVOURITE ANIMAL CARD BELOW THIS COMMENT 👇  ------------------>
     <!------------------------------------------------------------------------------------------------->
+    
+
     <div class="buddyCard">
       <div class="buddyCardPivot">
         <div class="buddyCardFront">
@@ -135,19 +136,16 @@
       </div>
     </div>
     <!--  CoolDude69 End-->
-  </section>
 
-  <section class="contributor-section">
-    <h2 style="text-align: center;">Added Pets!</h2>
-    <div class="contributor-cards">
+    <div>
       <div class="macsCard">
         <img src="./assets/images/macs.JPG" alt="yellow cockatiel" height="400">
         <p>This is Macs, our family cockatiel who has been with us for over 7 years.</p>
+        <p><strong>Likes</strong>: Head rubs, short walks on your shoulders, and millet.</p>
       </div>
     </div>
+
   </section>
-
-
 
   <!-- Scripts -->
   <script src="./assets/scripts/main.js"></script>
