Fix some minor styling issues that were causing flex property issues. Maintained individual styles for all cards unless needed changed to fix overall appearance.

--- a/index.html
+++ b/index.html
@@ -167,11 +167,10 @@
         </div>
     </div>
     <!--  Jeff End-->
-  </section>
 
 
-    <div>
-      <div class="macsCard">
+    <div class="macsCard">
+      <div class="macs-image">
         <img src="./assets/images/macs.JPG" alt="yellow cockatiel" height="400">
         <p>This is Macs, our family cockatiel who has been with us for over 7 years.</p>
         <p><strong>Likes</strong>: Head rubs, short walks on your shoulders, and millet.</p>
