--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
       <div class="welcome-content__rules">
         <details>
-          <summary> Will Be Accepted:</summary>
+          <summary class="summary" > Will Be Accepted:</summary>
 
           <ul>
             <li> A line or two of introduction text about your pet or favourite animal </li>
@@ -72,7 +72,7 @@
         </details>
 
         <details>
-          <summary> Won't Be Accepted: </summary>
+          <summary class="summary"> Won't Be Accepted: </summary>
 
           <ul>
             <li> Submittions containing offensive text, images, videos and links of any kind </li>
