Adding Simbi's Card

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
       <div class="welcome-content__rules">
         <details>
-          <summary class="summary" > Will Be Accepted:</summary>
+          <summary class="summary"> Will Be Accepted:</summary>
 
           <ul>
             <li> A line or two of introduction text about your pet or favourite animal </li>
@@ -91,7 +91,7 @@
     <!------------------------------------------------------------------------------------------------->
     <!-------------- 👇 ADD YOUR PET OR FAVOURITE ANIMAL CARD BELOW THIS COMMENT 👇  ------------------>
     <!------------------------------------------------------------------------------------------------->
-    
+
 
     <div class="buddyCard">
       <div class="buddyCardPivot">
@@ -114,8 +114,8 @@
         </div>
       </div>
     </div>
-     <!--  CoolDude69  -->
-     <div class="CoolDude69">
+    <!--  CoolDude69  -->
+    <div class="CoolDude69">
       <div class="CoolDude69-head">
         <div class="profile-img">
           <img src="./assets/images/CoolDude69.jpg" width="240px" height="200px">
@@ -131,9 +131,11 @@
             <li>Shy</li>
           </ul>
           <br />
-          <a href="https://en.wikipedia.org/wiki/Tortoise" target="_blank"><button class="btn-portfolio">More Info</button></a></div>
+          <a href="https://en.wikipedia.org/wiki/Tortoise" target="_blank"><button class="btn-portfolio">More
+              Info</button></a>
         </div>
       </div>
+    </div>
     </div>
     <!--  CoolDude69 End-->
 
@@ -143,13 +145,14 @@
       <div class="catthew-image">
         <img src="./assets/images/pets/catthew.png">
       </div>
-        <div class="catthew-info">
-          <p>  <strong>Name:</strong> Catthew 👑</p>
-          <p>  <strong>Age:</strong>  1 and a bit  </p>
-          <p> <strong> Hobbies:</strong> Catching frogs, meowing at birds, removing household wires and walking on keyboards 🐱 </p>
-          <p>  <strong>Friends:</strong> Busy Cat, Girl Cat </p>
-          <p>  <strong>Enemies:</strong> Old White Cat </p>
-        </div>
+      <div class="catthew-info">
+        <p> <strong>Name:</strong> Catthew 👑</p>
+        <p> <strong>Age:</strong> 1 and a bit </p>
+        <p> <strong> Hobbies:</strong> Catching frogs, meowing at birds, removing household wires and walking on
+          keyboards 🐱 </p>
+        <p> <strong>Friends:</strong> Busy Cat, Girl Cat </p>
+        <p> <strong>Enemies:</strong> Old White Cat </p>
+      </div>
     </div>
     <!--  Likii End-->
 
@@ -158,13 +161,13 @@
       <div class="dusty-image">
         <img src="./assets/images/pets/dusty.jpeg">
       </div>
-        <div class="dusty-info">
-          <p>  <strong>Name:</strong> Dusty</p>
-          <p>  <strong>Age:</strong>  2 years old - 14 in Dog Years </p>
-          <p> <strong> Hobbies:</strong> Digging, running around the yard and herding the other dogs. </p>
-          <p>  <strong>Friends:</strong> His brothers Gunther and Maximus </p>
-          <p>  <strong>Enemies:</strong> Loud Noises </p>
-        </div>
+      <div class="dusty-info">
+        <p> <strong>Name:</strong> Dusty</p>
+        <p> <strong>Age:</strong> 2 years old - 14 in Dog Years </p>
+        <p> <strong> Hobbies:</strong> Digging, running around the yard and herding the other dogs. </p>
+        <p> <strong>Friends:</strong> His brothers Gunther and Maximus </p>
+        <p> <strong>Enemies:</strong> Loud Noises </p>
+      </div>
     </div>
     <!--  Jeff End-->
 
@@ -176,6 +179,34 @@
         <p><strong>Likes</strong>: Head rubs, short walks on your shoulders, and millet.</p>
       </div>
     </div>
+    <!--  Simbi Start-->
+    <div class="card">
+      <div class="img-container">
+        <img src="./assets/images/simbi.jpeg" class="card-img">
+      </div>
+      <div class="top-text">
+        <div class="simbi-name">
+          Simbi</div>
+      </div>
+      <div class="bottom-text">
+        <div class="card-text">
+          <p class="intro-txt">Hey There! This is <strong>Simbi</strong></p>
+          <p class="about-txt">
+
+            <br />
+            <strong>Age:</strong> 2 years old
+            <br />
+            <strong>Likes</strong>: Sniff around and explore new areas ,Playing with ball and eating Bell peppers
+            <br />
+            <strong>Dislikes</strong>: Being alone, being ignored.
+            <br />
+            <strong>Talent:</strong> Hops really fast!
+          </p>
+        </div>
+
+      </div>
+    </div>
+    <!--  Simbi End-->
 
   </section>
 
