Add A-amon fav-animal card

--- a/index.html
+++ b/index.html
@@ -2,217 +2,242 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- SEO SETTINGS FOR GOOGLE-->
-  <meta name="author" content="HacktoberPet by Junior Developer Group" />
-  <meta name="description"
-    content="Join our HacktoberFest 2021 challenge and create a personalised card presenting your pet or a favourite animal" />
+	<!-- SEO SETTINGS FOR GOOGLE-->
+	<meta name="author" content="HacktoberPet by Junior Developer Group" />
+	<meta name="description"
+		content="Join our HacktoberFest 2021 challenge and create a personalised card presenting your pet or a favourite animal" />
 
-  <!-- SEO SETTINGS FOR WHEN WEBSITE URL IS SHARED -->
-  <meta name="og:title" property="og:title" content="HacktoberPet by Junior Developer Group" />
-  <meta property="og:description"
-    content="Join our HacktoberFest 2021 challenge and create a personalised card presenting your pet or a favourite animal" />
-  <meta property="og:image" content="/assets/website-images/logo-with-background.png" />
+	<!-- SEO SETTINGS FOR WHEN WEBSITE URL IS SHARED -->
+	<meta name="og:title" property="og:title" content="HacktoberPet by Junior Developer Group" />
+	<meta property="og:description"
+		content="Join our HacktoberFest 2021 challenge and create a personalised card presenting your pet or a favourite animal" />
+	<meta property="og:image" content="/assets/website-images/logo-with-background.png" />
 
-  <!-- WEBSITE TITLE-->
-  <title>HacktoberPet by Junior Developer Group</title>
+	<!-- WEBSITE TITLE-->
+	<title>HacktoberPet by Junior Developer Group</title>
 
-  <!-- FAVICON -->
-  <link rel="icon" type="image/jpg" href="./assets/images/favicon.ico" />
+	<!-- FAVICON -->
+	<link rel="icon" type="image/jpg" href="./assets/images/favicon.ico" />
 
-  <!-- CSS STYLESHEET -->
-  <link rel="stylesheet" href="./assets/styles/style.css" />
+	<!-- CSS STYLESHEET -->
+	<link rel="stylesheet" href="./assets/styles/style.css" />
 </head>
 
 <body>
 
-  <section class="header-introduction">
-    <header class="header-content">
+	<section class="header-introduction">
+		<header class="header-content">
 
-      <img src="./assets/images/logo.png" alt="Junior Developer Group | a butterfly with dotted wings">
+			<img src="./assets/images/logo.png" alt="Junior Developer Group | a butterfly with dotted wings">
 
-      <h1> HacktoberPet </h1>
+			<h1> HacktoberPet </h1>
 
-      <span>by Junior Developer Group </span>
-    </header>
-  </section>
+			<span>by Junior Developer Group </span>
+		</header>
+	</section>
 
-  <section class="welcome-stranger">
+	<section class="welcome-stranger">
 
-    <div class="welcome-content">
-      <h1> Welcome 😊 </h1>
+		<div class="welcome-content">
+			<h1> Welcome 😊 </h1>
 
-      <p>This page was set up as a simple front end challenge for
-        <a href="https://hacktoberfest.digitalocean.com/" target="_blank" noreferer>
-          HacktoberFest 2021 event.
-        </a>
-      </p>
+			<p>This page was set up as a simple front end challenge for
+				<a href="https://hacktoberfest.digitalocean.com/" target="_blank" noreferer>
+					HacktoberFest 2021 event.
+				</a>
+			</p>
 
-      <p> The goal is to create your personal pet or favourite animal card, style it any way you'd like to and have fun
-        making it. </p>
+			<p> The goal is to create your personal pet or favourite animal card, style it any way you'd like to and
+				have fun
+				making it. </p>
 
-      <p>
-        Before you start, please have a look at a couple of participation
-        rules I've set up. Not following the set rules might get your pull
-        request rejected.
-      </p>
+			<p>
+				Before you start, please have a look at a couple of participation
+				rules I've set up. Not following the set rules might get your pull
+				request rejected.
+			</p>
 
-      <div class="welcome-content__rules">
-        <details>
-          <summary class="summary"> Will Be Accepted:</summary>
+			<div class="welcome-content__rules">
+				<details>
+					<summary class="summary"> Will Be Accepted:</summary>
 
-          <ul>
-            <li> A line or two of introduction text about your pet or favourite animal </li>
-            <li> Any links to pointing towards more information on the chosen animal</li>
-            <li> Any personal links to your portfolios, projects or social media </li>
-            <li> Any personally owned images or videos (only via embeds) </li>
-          </ul>
-        </details>
+					<ul>
+						<li> A line or two of introduction text about your pet or favourite animal </li>
+						<li> Any links to pointing towards more information on the chosen animal</li>
+						<li> Any personal links to your portfolios, projects or social media </li>
+						<li> Any personally owned images or videos (only via embeds) </li>
+					</ul>
+				</details>
 
-        <details>
-          <summary class="summary"> Won't Be Accepted: </summary>
+				<details>
+					<summary class="summary"> Won't Be Accepted: </summary>
 
-          <ul>
-            <li> Submittions containing offensive text, images, videos and links of any kind </li>
-            <li> Use of copyrighted or promotional content not owned by yourself </li>
-            <li> Use of auto play for any videos submitted </li>
-            <li> Use of copy/pasted materials</li>
-          </ul>
-        </details>
-      </div>
-    </div>
+					<ul>
+						<li> Submittions containing offensive text, images, videos and links of any kind </li>
+						<li> Use of copyrighted or promotional content not owned by yourself </li>
+						<li> Use of auto play for any videos submitted </li>
+						<li> Use of copy/pasted materials</li>
+					</ul>
+				</details>
+			</div>
+		</div>
 
-  </section>
-
-
-  <section class="hacktoberfest-wrapper">
-    <!------------------------------------------------------------------------------------------------->
-    <!-------------- 👇 ADD YOUR PET OR FAVOURITE ANIMAL CARD BELOW THIS COMMENT 👇  ------------------>
-    <!------------------------------------------------------------------------------------------------->
+	</section>
 
 
-    <div class="buddyCard">
-      <div class="buddyCardPivot">
-        <div class="buddyCardFront">
-          <img class="buddy_image" src="./assets/images/buddy.png" alt="brown and white horse">
-          <hr>
-          <h1>Buddy</h1>
-        </div>
-        <div class="buddyCardBack">
-          <h1>Buddy</h1>
-          <p>This is my horse Buddy, ive owned him for 17 years, he is very much part of the family and although he is
-            retired now he still keeps me on my toes!</p>
-          <ul>
-            <li>❤️ Age: 24</li>
-            <li>❤️ Likes: Food! </li>
-            <li>❤️ Dislikes: Parsnips and being bathed!</li>
-            <li>❤️ Thinks: The grass is greener over the fence!</li>
-            <li>❤️ Special Talent: Escape artist. </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <!--  CoolDude69  -->
-    <div class="CoolDude69">
-      <div class="CoolDude69-head">
-        <div class="profile-img">
-          <img src="./assets/images/CoolDude69.jpg" width="240px" height="200px">
-        </div>
-      </div>
-      <div class="CoolDude69-body">
-        <div class="CoolDude69-name">CoolDude69</div>
-        <div class="desc">This is my Cute Baby Tortoise😍</div>
-        <div class="CoolDude69-content">
-          <ul>
-            <li>Age 6 -</li>
-            <li>Likes to Sleep -</li>
-            <li>Shy</li>
-          </ul>
-          <br />
-          <a href="https://en.wikipedia.org/wiki/Tortoise" target="_blank"><button class="btn-portfolio">More
-              Info</button></a>
-        </div>
-      </div>
-    </div>
-    </div>
-    <!--  CoolDude69 End-->
+	<section class="hacktoberfest-wrapper">
+		<!------------------------------------------------------------------------------------------------->
+		<!-------------- 👇 ADD YOUR PET OR FAVOURITE ANIMAL CARD BELOW THIS COMMENT 👇  ------------------>
+		<!------------------------------------------------------------------------------------------------->
+		<!--  A-amon  -->
+		<div class="amon-card">
+			<div class="amon-card__img-wrapper">
+				<img class="amon-card__img" src="./assets/images/amon-otter.jpg" alt="Sea otter">
+			</div>
+			<div class="amon-card__body">
+				<h3 class="amon-card__title">
+					Why sea otter?
+				</h3>
+				<p class="amon-card__desc">
+					I meant, look at how cute it is! 😗 How can you resist such looks...
+				</p>
+				<div class="amon-card__footer">
+					<strong class="amon-card__desc upper">
+						You found me!
+					</strong>
+					<p class="amon-card__desc">
+						Now, get back to work 😂
+					</p>
+				</div>
+			</div>
+		</div>
+		<!--  A-amon  -->
+
+		<div class="buddyCard">
+			<div class="buddyCardPivot">
+				<div class="buddyCardFront">
+					<img class="buddy_image" src="./assets/images/buddy.png" alt="brown and white horse">
+					<hr>
+					<h1>Buddy</h1>
+				</div>
+				<div class="buddyCardBack">
+					<h1>Buddy</h1>
+					<p>This is my horse Buddy, ive owned him for 17 years, he is very much part of the family and
+						although he is
+						retired now he still keeps me on my toes!</p>
+					<ul>
+						<li>❤️ Age: 24</li>
+						<li>❤️ Likes: Food! </li>
+						<li>❤️ Dislikes: Parsnips and being bathed!</li>
+						<li>❤️ Thinks: The grass is greener over the fence!</li>
+						<li>❤️ Special Talent: Escape artist. </li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<!--  CoolDude69  -->
+		<div class="CoolDude69">
+			<div class="CoolDude69-head">
+				<div class="profile-img">
+					<img src="./assets/images/CoolDude69.jpg" width="240px" height="200px">
+				</div>
+			</div>
+			<div class="CoolDude69-body">
+				<div class="CoolDude69-name">CoolDude69</div>
+				<div class="desc">This is my Cute Baby Tortoise😍</div>
+				<div class="CoolDude69-content">
+					<ul>
+						<li>Age 6 -</li>
+						<li>Likes to Sleep -</li>
+						<li>Shy</li>
+					</ul>
+					<br />
+					<a href="https://en.wikipedia.org/wiki/Tortoise" target="_blank"><button class="btn-portfolio">More
+							Info</button></a>
+				</div>
+			</div>
+		</div>
+		</div>
+		<!--  CoolDude69 End-->
 
 
-    <!--  Likii Start-->
-    <div class="likiis-card">
-      <div class="catthew-image">
-        <img src="./assets/images/pets/catthew.png">
-      </div>
-      <div class="catthew-info">
-        <p> <strong>Name:</strong> Catthew 👑</p>
-        <p> <strong>Age:</strong> 1 and a bit </p>
-        <p> <strong> Hobbies:</strong> Catching frogs, meowing at birds, removing household wires and walking on
-          keyboards 🐱 </p>
-        <p> <strong>Friends:</strong> Busy Cat, Girl Cat </p>
-        <p> <strong>Enemies:</strong> Old White Cat </p>
-      </div>
-    </div>
-    <!--  Likii End-->
+		<!--  Likii Start-->
+		<div class="likiis-card">
+			<div class="catthew-image">
+				<img src="./assets/images/pets/catthew.png">
+			</div>
+			<div class="catthew-info">
+				<p> <strong>Name:</strong> Catthew 👑</p>
+				<p> <strong>Age:</strong> 1 and a bit </p>
+				<p> <strong> Hobbies:</strong> Catching frogs, meowing at birds, removing household wires and walking on
+					keyboards 🐱 </p>
+				<p> <strong>Friends:</strong> Busy Cat, Girl Cat </p>
+				<p> <strong>Enemies:</strong> Old White Cat </p>
+			</div>
+		</div>
+		<!--  Likii End-->
 
-    <!--  Jeff Start-->
-    <div class="jeff-card">
-      <div class="dusty-image">
-        <img src="./assets/images/pets/dusty.jpeg">
-      </div>
-      <div class="dusty-info">
-        <p> <strong>Name:</strong> Dusty</p>
-        <p> <strong>Age:</strong> 2 years old - 14 in Dog Years </p>
-        <p> <strong> Hobbies:</strong> Digging, running around the yard and herding the other dogs. </p>
-        <p> <strong>Friends:</strong> His brothers Gunther and Maximus </p>
-        <p> <strong>Enemies:</strong> Loud Noises </p>
-      </div>
-    </div>
-    <!--  Jeff End-->
+		<!--  Jeff Start-->
+		<div class="jeff-card">
+			<div class="dusty-image">
+				<img src="./assets/images/pets/dusty.jpeg">
+			</div>
+			<div class="dusty-info">
+				<p> <strong>Name:</strong> Dusty</p>
+				<p> <strong>Age:</strong> 2 years old - 14 in Dog Years </p>
+				<p> <strong> Hobbies:</strong> Digging, running around the yard and herding the other dogs. </p>
+				<p> <strong>Friends:</strong> His brothers Gunther and Maximus </p>
+				<p> <strong>Enemies:</strong> Loud Noises </p>
+			</div>
+		</div>
+		<!--  Jeff End-->
 
 
-    <div class="macsCard">
-      <div class="macs-image">
-        <img src="./assets/images/macs.JPG" alt="yellow cockatiel" height="400">
-        <p>This is Macs, our family cockatiel who has been with us for over 7 years.</p>
-        <p><strong>Likes</strong>: Head rubs, short walks on your shoulders, and millet.</p>
-      </div>
-    </div>
-    <!--  Simbi Start-->
-    <div class="card">
-      <div class="img-container">
-        <img src="./assets/images/simbi.jpeg" class="card-img">
-      </div>
-      <div class="top-text">
-        <div class="simbi-name">
-          Simbi</div>
-      </div>
-      <div class="bottom-text">
-        <div class="card-text">
-          <p class="intro-txt">Hey There! This is <strong>Simbi</strong></p>
-          <p class="about-txt">
+		<div class="macsCard">
+			<div class="macs-image">
+				<img src="./assets/images/macs.JPG" alt="yellow cockatiel" height="400">
+				<p>This is Macs, our family cockatiel who has been with us for over 7 years.</p>
+				<p><strong>Likes</strong>: Head rubs, short walks on your shoulders, and millet.</p>
+			</div>
+		</div>
+		<!--  Simbi Start-->
+		<div class="card">
+			<div class="img-container">
+				<img src="./assets/images/simbi.jpeg" class="card-img">
+			</div>
+			<div class="top-text">
+				<div class="simbi-name">
+					Simbi</div>
+			</div>
+			<div class="bottom-text">
+				<div class="card-text">
+					<p class="intro-txt">Hey There! This is <strong>Simbi</strong></p>
+					<p class="about-txt">
 
-            <br />
-            <strong>Age:</strong> 2 years old
-            <br />
-            <strong>Likes</strong>: Sniff around and explore new areas ,Playing with ball and eating Bell peppers
-            <br />
-            <strong>Dislikes</strong>: Being alone, being ignored.
-            <br />
-            <strong>Talent:</strong> Hops really fast!
-          </p>
-        </div>
+						<br />
+						<strong>Age:</strong> 2 years old
+						<br />
+						<strong>Likes</strong>: Sniff around and explore new areas ,Playing with ball and eating Bell
+						peppers
+						<br />
+						<strong>Dislikes</strong>: Being alone, being ignored.
+						<br />
+						<strong>Talent:</strong> Hops really fast!
+					</p>
+				</div>
 
-      </div>
-    </div>
-    <!--  Simbi End-->
+			</div>
+		</div>
+		<!--  Simbi End-->
 
-  </section>
+	</section>
 
-  <!-- Scripts -->
-  <script src="./assets/scripts/main.js"></script>
-  <script type='text/javascript' src='./assets/scripts/joinUs.js'></script>
+	<!-- Scripts -->
+	<script src="./assets/scripts/main.js"></script>
+	<script type='text/javascript' src='./assets/scripts/joinUs.js'></script>
 
 </body>
 
