Added Mingkay card

--- a/index.html
+++ b/index.html
@@ -233,6 +233,25 @@
 		</div>
 		<!--  Simbi End-->
 
+		<!-- Mingkay Start -->
+		<div class="card">
+			<div id="title">
+				<h2>
+					Mingkay
+				</h2>
+			</div>
+			<div class="image-mingkay">
+				<img src="./assets/images/mingkay.jpeg" alt="mingkay" class="mingkay-pic">
+			</div>
+			<div id="details">
+				<p> The new family pet</p>
+				<p> <strong>Name:</strong> Mingkay </p>
+				<p> <strong>Age:</strong> 1 year old </p>
+				<p> <strong> Hobbies:</strong> Nap, Play, Eat</p>
+			</div>
+		</div>
+		<!-- Mingkay End -->
+
 	</section>
 
 	<!-- Scripts -->
