--- a/index.html
+++ b/index.html
@@ -251,6 +251,20 @@
 			</div>
 		</div>
 		<!-- Mingkay End -->
+	
+	         <!--  mthakur Start-->
+         	<div class="mthakur-card">
+    		  <div class="napser-image">
+     			  <img src="./assets/images/pets/napser.png">
+     		 </div>
+      		 <div class="napser-info">
+         	<p>  <strong>Name:</strong> napser</p>
+          	<p>  <strong>Age:</strong> 3 </p>
+          	<p> <strong> Hobbies:</strong> Having fun </p>         	
+          	
+            </div>
+          </div>
+    <!--  mthakur End-->
 
 	</section>
 
