--- a/index.html
+++ b/index.html
@@ -252,6 +252,30 @@
 		</div>
 		<!-- Mingkay End -->
 
+		<!-- Fluffy start -->
+		<div class="myPetWrapper">
+			<div class="myPetCard">
+
+				<div class="myPetImg"> </div>
+
+				<div class="myPetInfo">
+					<h3 class = "petName">Fluf<span class = "petName-2">fyy</span></h3> <hr>
+
+                    <p> <strong>Age:</strong> 1 year old <br>
+					<strong>Hobbies:</strong> sleeping, scratching,    chewing on wires, meowing <br>
+					<strong>Friends:</strong> cottony, furry, woolly <br>
+					<strong>Enemies:</strong> Everyone </p>
+
+                <div class="meetMyPet">
+                    <button class = "meetMeow">meet meow</button>
+                </div>
+
+				</div>
+
+			</div>
+    	</div>
+		<!-- Fluffy END -->
+
 	</section>
 
 	<!-- Scripts -->
