Add an Adrian card for Jezebel

--- a/index.html
+++ b/index.html
@@ -138,6 +138,23 @@
 				</div>
 			</div>
 		</div>
+
+		<!-- Adrian -->
+		<div class="adrian-card">
+			<div class="jezebel-image">
+				<img src="./assets/images/pets/jezebel.png" alt="Jezebel">
+			</div>
+			<div class="jezebel-info">
+				<p><strong>Name:</strong> Jezebel</p>
+				<p><strong>Age:</strong> About 3 and a half</p>
+				<p><strong>Description:</strong> Calico Persian</p>
+				<p><strong>Hobbies:</strong> Napping, looking out the window, and laying on my desk while I'm working</p>
+				<p><strong>Friends:</strong> Jinx, Jax, and Jagger</p>
+				<p><strong>Enemies:</strong> An empty food bowl!</p>
+			</div>
+		</div>
+		<!-- Adrian End -->
+
 		<!--  CoolDude69  -->
 		<div class="CoolDude69">
 			<div class="CoolDude69-head">
