Fix image link for Napser from .png to .jfif as the image in assets folder.

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 	         <!--  mthakur Start-->
          	<div class="mthakur-card">
     		  <div class="napser-image">
-     			  <img src="./assets/images/pets/napser.png">
+     			  <img src="./assets/images/pets/napser.jfif">
      		 </div>
       		 <div class="napser-info">
          	<p>  <strong>Name:</strong> napser</p>
